@@ -351,6 +351,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       Don't just abort () the program.
     - src/x2goutils.h: fix compile error due to typo.
     - src/pulsemanager.cpp: fix compile error on Windows.
+    - src/pulsemanager.cpp: fix startup when using the system-PA version.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
